--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "11_ecommerce_web",
+  "name": "shopme-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://github.com/mZeeshan-IQBAL/Ecommerce-product-page",
   "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview",
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist"
-},
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^1.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
@@ -32,5 +30,8 @@
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "vite": "^7.0.6"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
